--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "typescript": "4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,7 +51,6 @@
     "@types/node": "^20.9.2",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
-    "@types/react-router": "^5.1.20",
-    "typescript": "^5.2.2"
+    "@types/react-router": "^5.1.20"
   }
 }
