--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
-    "web-vitals": "^2.1.4",
-    "typescript": "4.9.5"
+    "reselect": "^5.0.1",
+    "typescript": "4.9.5",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
