--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@4tw/cypress-drag-drop": "^2.2.5",
     "@testing-library/react": "^14.1.2",
     "@types/jest": "^29.5.8",
     "@types/node": "^20.9.2",
