--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "react-burger",
   "version": "0.1.0",
+  "homepage": "https://sashadudkina5.github.io/react-project-BurgerApp/",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/user-event": "^13.5.0",
     "@ya.praktikum/react-developer-burger-ui-components": "^1.14.0",
+    "gh-pages": "^6.1.1",
     "immutability-helper": "^3.1.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
@@ -29,7 +31,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
