--- a/package.json
+++ b/package.json
@@ -31,9 +31,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "cypress:open": "cypress open",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+   "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -60,11 +59,6 @@
     "@types/node": "^20.9.2",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
-    "@types/react-router": "^5.1.20",
-    "cypress": "^13.6.2",
-    "eslint-plugin-cypress": "^2.15.1",
-    "fetch-mock": "^9.11.0",
-    "react-test-renderer": "^18.2.0",
-    "redux-mock-store": "^1.5.4"
+    "@types/react-router": "^5.1.20"
   }
 }
