--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-   "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "cypress": "cypress open",
+    "cypress:clear": "cypress cache clear"
   },
   "eslintConfig": {
     "extends": [
@@ -59,6 +61,7 @@
     "@types/node": "^20.9.2",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
-    "@types/react-router": "^5.1.20"
+    "@types/react-router": "^5.1.20",
+    "cypress": "^13.6.4"
   }
 }
